[1.4.0-SNAPSHOT]
- Backgrounds can now be applied to Labels
- UiFont now caches BitmapFont instances
- Added Graphics#drawBitmapFontCache
- UI framework now renders text using BitmapFontCache instances
- Performance improvements to Polygon class
- Moved Os util classes to natives-loader project

[1.3.1]
- Graphics can now take circle radius as an int or float
- Added methods to access RenderLayer children
- Added UiContainerListener interface for listening to UiContainer events
- Fixed ninepatch sizes not applying to Buttons correctly

[1.3.0]
- Updated to libGDX 1.9.4, roboVM 2.2.0, and artemis-odb 1.4.0
- Updated to Android build tools 23.0.1
- (#38) Added drawNinePatch() and clearScaling() methods to Graphics
- (#45) Added contains and getDistanceFromCenter to Circle
- (#45) Added fillShape() method to Graphics class
- (#45) Added Shape#intersects(Shape) and Shape#contains(Shape)
- (#45) Added Polygon and Triangle classes. Rectangle now backed by Polygon.
- (#46) Fixed ParticleEffect not flipped correctly on load
- (#48) Fixed alpha channel not being applied to line rendering
- (#50) Fixed TiledMap rendering incorrectly when scaled down
- (#54) Added performance benchmarking for collisions
- (#55) Added non-rectangle support to RegionQuadTree and ConcurrentRegionQuadTree
- Improved Graphics#clip performance on mobile devices (changed to Depth Buffer method)
- Added UI framework (mini2Dx-ui)
- Added headless runtime (mini2Dx-headless)
- Added controller mappings - Xbox One, Xbox 360 controllers
- Added controller dead zone implementations - axial, radial and scaled radial
- Added render pipeline feature
- Added RegularShape classes (shapes with equal interior angles)
- Added NPE prevention to TiledCollisionMapper
- Added additional drawTexture() methods to Graphics
- Added Sizeable and SizeChangeListener interfaces
- Added GameResizeListener and removed onResize method from GameContainer
- Added MdxException for mini2Dx runtime exceptions