@@ -51,6 +51,8 @@ public abstract class XmlSerializerTest {
 		System.out.println(xml);
 		
 		TestParentObject result = xmlSerializer.fromXml(xml, TestParentObject.class);
+		Assert.assertTrue(result.isPostDeserializeCalled());
+		
 		Assert.assertEquals(parentObject.getSuperField(), result.getSuperField());
 		Assert.assertEquals(parentObject.getEnumValue(), result.getEnumValue());
 		Assert.assertEquals(parentObject.isBooleanValue(), result.isBooleanValue());
